Switch Littlefs to no-malloc mode

--- a/alire.toml
+++ b/alire.toml
@@ -18,3 +18,6 @@ clic = "*"
 
 [[pins]]
 clic = { url='https://github.com/alire-project/clic.git' }
+
+[configuration.values]
+littlefs.No_Malloc = true
